- allow clients to take org.opensuse.Snapper.Client prefixed names

--- a/data/org.opensuse.Snapper.conf
+++ b/data/org.opensuse.Snapper.conf
@@ -8,6 +8,7 @@
   </policy>
   <policy context="default">
     <deny own="org.opensuse.Snapper"/>
+    <allow own_prefix="org.opensuse.Snapper.Client"/>
     <allow send_destination="org.opensuse.Snapper" send_interface="org.opensuse.Snapper"/>
     <allow send_destination="org.opensuse.Snapper" send_interface="org.freedesktop.DBus.Introspectable"/>
   </policy>
