Add snapper dbus client example C code
Connect to snapperd over dbus and dispatch requests. Requests are
manually unmarshalled based on the response signature.
Currently only ListSnapshots and ListConfigs commands are supported.

--- a/configure.in
+++ b/configure.in
@@ -69,6 +69,7 @@ AC_OUTPUT(
 	Makefile
 	snapper/Makefile
 	examples/Makefile
+	examples/C/Makefile
 	bindings/Makefile
 	bindings/python/Makefile
 	dbus/Makefile
