- link libraries at correct place

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -15,6 +15,5 @@ snapper_SOURCES =			\
 	commands.cc	commands.h	\
 	cleanup.cc	cleanup.h
 
-snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la	\
-	-ldbus-1 -lboost_thread-mt
+snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
 
