--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Makefile.am for snapper/utils/dbus
+# Makefile.am for snapper/dbus
 #
 
 INCLUDES = -I$(top_srcdir) -I/usr/include/dbus-1.0 -I$(libdir)/dbus-1.0/include
@@ -10,3 +10,6 @@ libdbus_la_SOURCES =					\
 	DBusMessage.cc		DBusMessage.h		\
 	DBusConnection.cc	DBusConnection.h	\
 	DBusMainLoop.cc		DBusMainLoop.h
+
+libdbus_la_LIBADD = -ldbus-1
+
