--- a/doc/snapper.8.in
+++ b/doc/snapper.8.in
@@ -1,4 +1,4 @@
-.TH "SNAPPER" "8" "2012-09-04" "@VERSION@" "Filesystem Snapshot Management"
+.TH "SNAPPER" "8" "2012-10-15" "@VERSION@" "Filesystem Snapshot Management"
 .SH "NAME"
 .LP
 snapper - Command\-line program for filesystem snapshot management
@@ -181,8 +181,8 @@ and the key and value must be seperated by an equal sign,
 e.g. requestid=42,user=arthur.
 
 .TP
-.B delete <number>
-Delete a snapshot.
+.B delete <number> | <number1>-<number2>
+Delete a snapshot or a range of snapshots.
 
 .TP
 .B mount <number>
@@ -255,4 +255,4 @@ Arvin Schnell <aschnell@suse.de>
 
 .SH "SEE ALSO"
 .LP
-btrfs(8), lvcreate(2)
+btrfs(8), lvm(8)
