- moved documentation to man-page

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,7 +4,7 @@
 
 man_MANS = snapper.8 snapperd.8
 
-TXTS = dbus-protocol.txt permissions.txt
+TXTS = dbus-protocol.txt
 
 EXTRA_DIST = $(man_MANS) $(TXTS)
 
