--- a/examples/C/Makefile.am
+++ b/examples/C/Makefile.am
@@ -2,12 +2,12 @@
 # Makefile.am for snapper/examples/C
 #
 
-INCLUDES = -I$(top_srcdir) -I/usr/include/dbus-1.0 -I$(libdir)/dbus-1.0/include
+INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 noinst_PROGRAMS = csnap
 
 csnap_SOURCES =						\
 	snapper_dbus_cli.c
 
-csnap_LDADD = -ldbus-1
+csnap_LDFLAGS =  $(DBUS_LIBS)
 
