--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper/server
 #
 
-INCLUDES = -I$(top_srcdir) -I/usr/include/dbus-1.0 -I$(libdir)/dbus-1.0/include
+INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 
 sbin_PROGRAMS = snapperd
