Make the zypp plugin optional, but enabled by default

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -7,5 +7,7 @@ EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py
 install-data-local:
 	install -D snapper-hourly $(DESTDIR)/etc/cron.hourly/suse.de-snapper
 	install -D snapper-daily $(DESTDIR)/etc/cron.daily/suse.de-snapper
+if HAVE_ZYPP
 	install -D zypp-plugin.py $(DESTDIR)/usr/lib/zypp/plugins/commit/snapper.py
+endif
 
