--- a/configure.in
+++ b/configure.in
@@ -58,6 +58,10 @@ if test "x$with_lvm" != "xyes" -a "x$with_ext4" != "xyes" -a "x$with_btrfs" != "
 	AC_MSG_ERROR([You have to enable at least one snapshot type (remove some --disable-xxx parameter)])
 fi
 
+AC_ARG_ENABLE([zypp], AC_HELP_STRING([--disable-zypp],[Disable zypp plugin support]),
+		[with_zypp=$enableval],[with_zypp=yes])
+AM_CONDITIONAL(HAVE_ZYPP, [test "$with_zypp" != "no"])
+
 PKG_CHECK_MODULES(DBUS, dbus-1)
 
 AC_SUBST(VERSION)
