--- a/configure.in
+++ b/configure.in
@@ -68,6 +68,8 @@ AC_ARG_ENABLE([zypp], AC_HELP_STRING([--disable-zypp],[Disable zypp plugin suppo
 		[with_zypp=$enableval],[with_zypp=yes])
 AM_CONDITIONAL(HAVE_ZYPP, [test "$with_zypp" != "no"])
 
+AC_CHECK_LIB(btrfs, btrfs_read_and_process_send_stream)
+
 PKG_CHECK_MODULES(DBUS, dbus-1)
 
 AC_SUBST(VERSION)
