- temporary fix for latest autoconf tools

--- a/configure.in
+++ b/configure.in
@@ -14,7 +14,7 @@ LIBVERSION_AGE=`expr $LIBVERSION_MINOR`
 LIBVERSION_INFO=$LIBVERSION_CURRENT:$LIBVERSION_REVISON:$LIBVERSION_AGE
 
 AM_INIT_AUTOMAKE(snapper, $VERSION)
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 
 AC_DISABLE_STATIC
 
