- add configuration option --enable-xattrs

--- a/configure.in
+++ b/configure.in
@@ -96,6 +96,15 @@ AM_CONDITIONAL(HAVE_ZYPP, [test "$with_zypp" != "no"])
 
 AC_CHECK_LIB(btrfs, btrfs_read_and_process_send_stream)
 
+AC_ARG_ENABLE([xattrs], AC_HELP_STRING([--enable-xattrs],[Enable extended attributes support in diff, status and undochange commands]),
+		[with_xattrs=$enableval],[with_xattrs=no])
+
+AM_CONDITIONAL(HAVE_XATTRS, [test "x$with_xattrs" !=  "xno"])
+
+if test "x$with_xattrs" != "xno"; then
+	AC_DEFINE(ENABLE_XATTRS, 1, [Enable extended attributes support])
+fi
+
 PKG_CHECK_MODULES(DBUS, dbus-1)
 
 AC_SUBST(VERSION)
