--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -153,7 +153,7 @@ Authors:
 %{prefix}/include/snapper
 
 %package -n snapper-zypp-plugin
-Requires:	snapper libzypp(plugin:commit) zypp-plugin-python
+Requires:	snapper libzypp(plugin:commit) zypp-plugin-python dbus-1-python
 Summary:	A zypp commit plugin for calling snapper
 Group:		System/Packages
 
