- fix for portability issues, solves bug #803001
Adds a "--with-conf" option to the configure file for specifying a
custom sysconfig directory. Also removes statically initialised variables
from SnapperDefines.h, having them dynamically initialised by the configure
script instead. And includes a configure file, as requiring users to
generate one themselves has numerous disadvantages.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper
 #
 
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = snapper examples dbus server client scripts data doc po testsuite-real testsuite-cmp
 
 AUTOMAKE_OPTIONS = foreign dist-bzip2 no-dist-gzip
