--- a/configure.in
+++ b/configure.in
@@ -15,6 +15,7 @@ LIBVERSION_INFO=$LIBVERSION_CURRENT:$LIBVERSION_REVISON:$LIBVERSION_AGE
 
 AM_INIT_AUTOMAKE(snapper, $VERSION)
 AM_CONFIG_HEADER(config.h)
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_DISABLE_STATIC
 
@@ -24,6 +25,19 @@ AM_PROG_LIBTOOL
 
 AC_PREFIX_DEFAULT(/usr)
 
+AC_PATH_PROG([CHSNAPBIN], [chsnap], [/sbin/chsnap], [$PATH$PATH_SEPARATOR/sbin])
+AC_PATH_PROG([CPBIN], [cp], [/bin/cp])
+AC_PATH_PROG([TOUCHBIN], [touch], [/usr/bin/touch])
+AC_PATH_PROG([RMBIN], [rm], [/bin/rm])
+AC_PATH_PROG([DIFFBIN], [diff], [/usr/bin/diff])
+AC_PATH_PROG([CHATTRBIN], [chattr], [/usr/bin/chattr])
+AC_PATH_PROG([LVCREATEBIN], [lvcreate], [/sbin/lvcreate], [$PATH$PATH_SEPARATOR/sbin])
+AC_PATH_PROG([LVREMOVEBIN], [lvremove], [/sbin/lvremove], [$PATH$PATH_SEPARATOR/sbin])
+AC_PATH_PROG([LVSBIN], [lvs], [/sbin/lvs], [$PATH$PATH_SEPARATOR/sbin])
+CPPFLAGS="${CPPFLAGS} -DCHSNAPBIN='\"${CHSNAPBIN}\"' -DCPBIN='\"${CPBIN}\"' -DTOUCHBIN='\"${TOUCHBIN}\"'"
+CPPFLAGS="${CPPFLAGS} -DRMBIN='\"${RMBIN}\"' -DDIFFBIN='\"${DIFFBIN}\"' -DCHATTRBIN='\"${CHATTRBIN}\"'"
+CPPFLAGS="${CPPFLAGS} -DLVCREATEBIN='\"${LVCREATEBIN}\"' -DLVREMOVEBIN='\"${LVREMOVEBIN}\"' -DLVSBIN='\"${LVSBIN}\"'"
+
 dnl Automake 1.11 enables silent compilation
 dnl Disable it by "configure --disable-silent-rules" or "make V=1"
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
@@ -32,6 +46,12 @@ CFLAGS="${CFLAGS} -Wall -Wformat=2 -Wmissing-prototypes"
 CXXFLAGS="${CXXFLAGS} -std=c++0x -Wall -Wextra -Wformat=2 -Wnon-virtual-dtor -Wno-unused-parameter"
 
 fillupdir=/var/adm/fillup-templates
+
+AC_ARG_WITH([conf], AC_HELP_STRING([--with-conf], [Use a custom sysconfig directory (default is /etc/sysconfig)]),
+		[with_conf=$withval], [with_conf=no])
+
+AS_IF([test "x$with_conf" != xno], [CPPFLAGS="${CPPFLAGS} -DCONFDIR='\"${with_conf}\"'"],
+		[CPPFLAGS="${CPPFLAGS} -DCONFDIR='\"/etc/sysconfig\"'"])
 
 AC_ARG_ENABLE([btrfs], AC_HELP_STRING([--disable-btrfs],[Disable Btrfs internal snapshots support]),
 		[with_btrfs=$enableval],[with_btrfs=yes])
