--- a/configure.in
+++ b/configure.in
@@ -24,6 +24,26 @@ AM_PROG_LIBTOOL
 
 AC_PREFIX_DEFAULT(/usr)
 
+AC_PATH_PROG([CHSNAPBIN], [chsnap], [/sbin/chsnap])
+AC_PATH_PROG([CPBIN], [cp], [/bin/cp])
+AC_PATH_PROG([TOUCHBIN], [touch], [/usr/bin/touch])
+AC_PATH_PROG([RMBIN], [rm], [/bin/rm])
+AC_PATH_PROG([DIFFBIN], [diff], [/usr/bin/diff])
+AC_PATH_PROG([CHATTRBIN], [chattr], [/usr/bin/chattr])
+AC_PATH_PROG([LVCREATEBIN], [lvcreate], [/sbin/lvcreate])
+AC_PATH_PROG([LVREMOVEBIN], [lvremove], [/sbin/lvremove])
+AC_PATH_PROG([LVSBIN], [lvs], [/sbin/lvs])
+
+AC_DEFINE_UNQUOTED([CHSNAPBIN], ["$CHSNAPBIN"], [Path of chsnap program.])
+AC_DEFINE_UNQUOTED([CPBIN], ["$CPBIN"], [Path of cp program.])
+AC_DEFINE_UNQUOTED([TOUCHBIN], ["$TOUCHBIN"], [Path of touch program.])
+AC_DEFINE_UNQUOTED([RMBIN], ["$RMBIN"], [Path of rm program.])
+AC_DEFINE_UNQUOTED([DIFFBIN], ["$DIFFBIN"], [Path of diff program.])
+AC_DEFINE_UNQUOTED([CHATTRBIN], ["$CHATTRBIN"], [Path of chattr program.])
+AC_DEFINE_UNQUOTED([LVCREATEBIN], ["$LVCREATEBIN"], [Path of lvcreate program.])
+AC_DEFINE_UNQUOTED([LVREMOVEBIN], ["$LVREMOVEBIN"], [Path of lvremove program.])
+AC_DEFINE_UNQUOTED([LVSBIN], ["$LVSBIN"], [Path of lvs program.])
+
 dnl Automake 1.11 enables silent compilation
 dnl Disable it by "configure --disable-silent-rules" or "make V=1"
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
@@ -32,6 +52,12 @@ CFLAGS="${CFLAGS} -Wall -Wformat=2 -Wmissing-prototypes"
 CXXFLAGS="${CXXFLAGS} -std=c++0x -Wall -Wextra -Wformat=2 -Wnon-virtual-dtor -Wno-unused-parameter"
 
 fillupdir=/var/adm/fillup-templates
+
+AC_ARG_WITH([conf], AC_HELP_STRING([--with-conf], [Use a custom sysconfig directory (default is /etc/sysconfig)]),
+	[with_conf=$withval], [with_conf=no])
+
+AS_IF([test "x$with_conf" != xno], [CPPFLAGS="${CPPFLAGS} -DCONFDIR='\"${with_conf}\"'"],
+	[CPPFLAGS="${CPPFLAGS} -DCONFDIR='\"/etc/sysconfig\"'"])
 
 AC_ARG_ENABLE([btrfs], AC_HELP_STRING([--disable-btrfs],[Disable Btrfs internal snapshots support]),
 		[with_btrfs=$enableval],[with_btrfs=yes])
