--- a/doc/snapper.8.in
+++ b/doc/snapper.8.in
@@ -219,6 +219,21 @@ Read files for which to undo changes from file <file>.
 Run the cleanup algorithm <cleanup-algorithm>. Currently implemented cleanup
 algorithms are number, timeline and empty-pre-post.
 
+.TP
+.B xadiff <number1>..<number2> [files]
+Compare the extended attributes. This command will genereate a report
+describing the modifications that have taken place in time between the
+snapshots number1 and number2 has been made. See example below:
+.IP
+.B \ +:user.foo
+for created attributes
+.IP
+.B \ -:user.bar
+for removed attributes
+.IP
+.B -+:security.selinux
+for modified attributes
+
 .SH "PERMISSIONS"
 .LP
 Non-root users can be allowed to use a configuration by setting ALLOW_USERS or
