--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -62,7 +62,9 @@ autoheader
 automake --add-missing --copy
 autoconf
 
-./configure --libdir=%{_libdir} --prefix=%{prefix} --mandir=%{_mandir} --docdir=%{prefix}/share/doc/packages/snapper --disable-ext4 --disable-silent-rules
+./configure --libdir=%{_libdir} --prefix=%{prefix} --mandir=%{_mandir}		\
+	--docdir=%{prefix}/share/doc/packages/snapper				\
+	--disable-silent-rules --disable-ext4 --enable-xattrs
 make %{?jobs:-j%jobs}
 
 %install
