--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -2,7 +2,15 @@
 # Makefile.am for snapper/scripts
 #
 
-EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py
+pam_snapperdir = /usr/lib/pam_snapper
+
+pam_snapper_SCRIPTS =			\
+	pam_snapper_homeconvert.sh	\
+	pam_snapper_pamconfig.sh	\
+	pam_snapper_useradd.sh		\
+	pam_snapper_userdel.sh
+
+EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py $(pam_snapper_SCRIPTS)
 
 install-data-local:
 	install -D snapper-hourly $(DESTDIR)/etc/cron.hourly/suse.de-snapper
