- set _GNU_SOURCE instead of __USE_GNU

--- a/pam/Makefile.am
+++ b/pam/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper/pam
 #
 
+AM_CFLAGS = -D_GNU_SOURCE
+
 INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 securelibdir = $(shell echo /`basename $(libdir)`/security)
