- make pam module optional - set better cflags - avoid some compiler warnings

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,7 +2,11 @@
 # Makefile.am for snapper/doc
 #
 
-man_MANS = snapper.8 snapperd.8 pam_snapper.8
+man_MANS = snapper.8 snapperd.8
+
+if HAVE_PAM
+man_MANS += pam_snapper.8
+endif
 
 TXTS = dbus-protocol.txt
 
