--- a/pam/Makefile.am
+++ b/pam/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper/pam
 #
 
+if HAVE_PAM
+
 AM_CFLAGS = -D_GNU_SOURCE
 
 INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
@@ -12,4 +14,6 @@ securelib_LTLIBRARIES = pam_snapper.la
 
 pam_snapper_la_LDFLAGS = -no-undefined -avoid-version -module
 pam_snapper_la_LIBADD = -lpam $(DBUS_LIBS)
+
+endif
 
