--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper/scripts
 #
 
+if HAVE_PAM
+
 pam_snapperdir = /usr/lib/pam_snapper
 
 pam_snapper_SCRIPTS =			\
@@ -9,6 +11,8 @@ pam_snapper_SCRIPTS =			\
 	pam_snapper_pamconfig.sh	\
 	pam_snapper_useradd.sh		\
 	pam_snapper_userdel.sh
+
+endif
 
 EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py $(pam_snapper_SCRIPTS)
 
