--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -53,7 +53,7 @@ endif
 
 
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
-libsnapper_la_LIBADD = -lboost_thread-mt -lxml2 -lz -lm
+libsnapper_la_LIBADD = -lboost_thread-mt -lboost_system-mt -lxml2 -lz -lm
 
 pkgincludedir = $(includedir)/snapper
 
