--- a/doc/pam_snapper.sgml.in
+++ b/doc/pam_snapper.sgml.in
@@ -2,7 +2,10 @@
 
 <refentry id='pam_snapper8'>
 
-  <refentryinfo><date>2013-05-23</date></refentryinfo>
+  <refentryinfo>
+    <date>2013-05-23</date>
+  </refentryinfo>
+
   <refmeta>
     <refentrytitle>pam_snapper</refentrytitle>
     <manvolnum>8</manvolnum>
@@ -10,6 +13,7 @@
     <refmiscinfo class='source'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
+
   <refnamediv>
     <refname>pam_snapper</refname>
     <refpurpose>PAM module which creates filesystem snapshots via "Snapper"</refpurpose>
@@ -17,15 +21,16 @@
 
   <refsynopsisdiv id='synopsis'>
     <cmdsynopsis>
-      <command>pam_snapper.so</command>    <arg choice='opt'><replaceable>debug</replaceable></arg>
-      <arg choice='opt'><replaceable>homeprefix=&lt;&gt;</replaceable></arg>
-      <arg choice='opt'><replaceable>ignoreservices=&lt;&gt;</replaceable></arg>
-      <arg choice='opt'><replaceable>ignoreusers=&lt;&gt;</replaceable></arg>
-      <arg choice='opt'><replaceable>rootasroot</replaceable></arg>
-      <arg choice='opt'><replaceable>ignoreroot</replaceable></arg>
-      <arg choice='opt'><replaceable>openonly</replaceable></arg>
-      <arg choice='opt'><replaceable>closeonly</replaceable></arg>
-      <arg choice='opt'><replaceable>cleanup=&lt;&gt;</replaceable></arg>
+      <command>pam_snapper.so</command>
+      <arg choice='opt'>debug</arg>
+      <arg choice='opt'>homeprefix=<replaceable>prefix</replaceable></arg>
+      <arg choice='opt'>ignoreservices=<replaceable>services</replaceable></arg>
+      <arg choice='opt'>ignoreusers=<replaceable>users</replaceable></arg>
+      <arg choice='opt'>rootasroot</arg>
+      <arg choice='opt'>ignoreroot</arg>
+      <arg choice='opt'>openonly</arg>
+      <arg choice='opt'>closeonly</arg>
+      <arg choice='opt'>cleanup=<replaceable>algorithm</replaceable></arg>
     </cmdsynopsis>
   </refsynopsisdiv>
 
@@ -52,7 +57,6 @@
 	<term>homeprefix=&lt;prefix&gt;</term>
 	<listitem>
 	  <para>Prefix for the name of the snapper configuration. The username will be appended to this prefix.</para>
-
 	  <para>Default: "home_"</para>
 	</listitem>
       </varlistentry>
@@ -72,7 +76,6 @@
 	<term>rootasroot</term>
 	<listitem>
 	  <para>Perform a snapshot using the snapper configuration "root", if the user "root" logs in. In other words: the homeprefix is not used in this case. As the snapper configuration "root" is used for the system (the root filesystem), this means that with every login of the user "root" the complete "/" filesystem will be snapshotted. This can be useful to help administrators rolling back in case their activity / configuration changes have been accidentially wrong.</para>
-
 	  <para>"rootasroot" and "ignoreroot" are mutual exclusive.</para>
 	</listitem>
       </varlistentry>
@@ -80,7 +83,6 @@
 	<term>ignoreroot</term>
 	<listitem>
 	  <para>No snapshot is taken, if the user "root" opens/closes a session.</para>
-
 	  <para>"rootasroot" and "ignoreroot" are mutual exclusive.</para>
 	</listitem>
       </varlistentry>
@@ -88,7 +90,6 @@
 	<term>openonly</term>
 	<listitem>
 	  <para>Only create a single snapshot when opening the PAM session.</para>
-
 	  <para>Default: create pre- and post-snapshots</para>
 	</listitem>
       </varlistentry>
@@ -96,7 +97,6 @@
 	<term>closeonly</term>
 	<listitem>
 	  <para>Only create a single snapshot when closing the PAM session.</para>
-
 	  <para>Default: create pre- and post-snapshots</para>
 	</listitem>
       </varlistentry>
@@ -104,7 +104,6 @@
 	<term>cleanup</term>
 	<listitem>
 	  <para>Set snapper cleanup algorithm.</para>
-
 	  <para>Default: (none)</para>
 	</listitem>
       </varlistentry>
