--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,8 @@ AM_PROG_LIBTOOL
 
 AC_PREFIX_DEFAULT(/usr)
 
+AC_PATH_PROG([XSLTPROC], [xsltproc])
+
 AC_PATH_PROG([CHSNAPBIN], [chsnap], [/sbin/chsnap])
 AC_PATH_PROG([CPBIN], [cp], [/bin/cp])
 AC_PATH_PROG([TOUCHBIN], [touch], [/usr/bin/touch])
