- added target to make html versions of man-pages

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -15,6 +15,11 @@ TXTS = dbus-protocol.txt
 
 EXTRA_DIST = $(TXTS)
 
+html: $(man_MANS:%.8=%.html)
+
+.xml.html: .xml
+	$(XSLTPROC) -nonet http://docbook.sourceforge.net/release/xsl/current/html/docbook.xsl $< > $@
+
 clean-local:
 	rm -f *.8 manpage.*
 
