- link to http://snapper.io/

--- a/doc/snapperd.xml.in
+++ b/doc/snapperd.xml.in
@@ -31,7 +31,7 @@
 
   <refsect1 id='homepage'>
     <title>HOMEPAGE</title>
-    <para><ulink url='http://en.opensuse.org/Portal:Snapper'>http://en.opensuse.org/Portal:Snapper</ulink></para>
+    <para><ulink url='http://snapper.io/'>http://snapper.io/</ulink></para>
   </refsect1>
 
   <refsect1 id='authors'>
