- derive ConfigInfo from SysconfigFile

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -63,5 +63,6 @@ pkginclude_HEADERS =					\
 	Snapshot.h					\
 	File.h						\
 	Comparison.h					\
+	AsciiFile.h					\
 	Exception.h					\
 	Logger.h
