- package run-all script

--- a/testsuite-cmp/Makefile.am
+++ b/testsuite-cmp/Makefile.am
@@ -6,7 +6,11 @@ INCLUDES = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la
 
+noinst_SCRIPTS = run-all
+
 noinst_PROGRAMS = cmp
 
 cmp_SOURCES = cmp.cc
+
+EXTRA_DIST = $(noinst_SCRIPTS)
 
